Corrected mobile overflow

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -20,6 +20,11 @@
 
   .div__footer {
     color: white;
+    width: 100%;
+  }
+
+  .div__footer > p {
+    margin: 10px;
   }
 
   .div__links {
