--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -31,7 +31,7 @@
     grid-column: 2 / 3;
     grid-row: 1;
     color: #fff;
-    height: 100%;
+    height: 550px;
     padding-left: 20px;
     margin-top: 150px;
     z-index: 1;
@@ -64,7 +64,7 @@
   }
 
   .image--rocket {
-    width: 90%;
+    width: 80%;
     height: auto;
     transform: rotate(10deg);
     z-index: 0;
@@ -72,6 +72,7 @@
     position: relative;
     left: -25%;
     bottom: 0;
+    margin-top: 50px;
   }
 
 @keyframes RocketAnimation {
@@ -226,6 +227,12 @@
     margin-left: 40px;
   }
 
+  .image--rubix {
+    height: 200px;
+    width: auto;
+    margin-top: 20px;
+  }
+
   .grid-item-blue-info-1 {
     grid-column: 1;
     grid-row: 2;
@@ -236,13 +243,6 @@
     grid-column: 1;
     grid-row: 3;
     text-align: center;
-  }
-
-  .image--rubix {
-    height: 300px;
-    width: auto;
-    margin-left: 20px;
-    margin-top: 20px;
   }
 
   .grid-container-grey-community {
@@ -256,7 +256,7 @@
 
   .grid-item-grey-community-1 {
     grid-column: 1;
-    padding: 1;
+    padding: 0;
     text-align: center;
   }
 
@@ -2007,6 +2007,7 @@
 
 /* falling stars hero background */
 .night-sky-gradient-container {
+  width: 100%;
   background: #53606b;
   background: -moz-linear-gradient(240deg, #202020 0%, #364048 32%, #53606b 100%);
   background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, #53606b), color-stop(68%, #364048), color-stop(100%, #202020));
